--- a/config.json
+++ b/config.json
@@ -1,6 +1,15 @@
 {
   "models": [
-
+   {
+      "serviceName": "flow_classification_test_uplift",
+      "modelBasePath": "src/text_classification/flow_classification/local/.",
+      "apiBasePath": "text_classification/flow_classification_test_uplift/local/",
+      "containerPort": 8000,
+      "environment": {},
+      "nginx": [],
+      "constraints": ["node.role==worker"],
+      "build": true
+    },
         {
       "serviceName": "flow_classification",
       "modelBasePath": "src/text_classification/flow_classification/local/.",
@@ -20,7 +29,7 @@
         "OPENAI_API_KEY": "${OPENAI_API_KEY}"
       },
       "nginx": [],
-      "build": true
+      "build": false
     },
      {
       "serviceName": "convo_starter",
@@ -62,7 +71,7 @@
         "OPENAI_API_KEY": "${OPENAI_API_KEY}"
       },
       "nginx": ["client_max_body_size 100M;", "proxy_read_timeout 600;", "proxy_connect_timeout 600;", "proxy_send_timeout 600;"],
-      "build": true
+      "build": false
     },
     {
       "serviceName": "asr_whisper_en",
@@ -205,7 +214,7 @@
         "OPENAI_API_KEY": "${OPENAI_API_KEY}"
       },
       "nginx": [],
-      "build": true
+      "build": false
     },
     {
       "serviceName": "llm_openai_gpt4",
@@ -216,7 +225,7 @@
         "OPENAI_API_KEY": "${OPENAI_API_KEY}"
       },
       "nginx": [],
-      "build": true
+      "build": false
     }
   ]
 }
